# ant

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  Makefile  README.md  serve.py  watch.py
.cursor/rules/: main.mdc
.github/workflows/: deploy-wasm.yml
pkg/: README.md  ant.d.ts  ant.js  ant_bg.wasm.d.ts  package.json
public/: index.html
src/: ant.rs  colony.rs  lib.rs  main.rs  terrain.rs
src/ant/: app.rs  behaviors.rs  components.rs  mod.rs  pathfinding.rs  systems.rs
src/ant/systems/: ant_movement.rs  mouse_click.rs
src/terrain/: mod.rs
src/world/: camera.rs  mod.rs  resources.rs  terrain.rs  ui.rs
