[package]
name = "ant"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A procedurally generated ant farm simulation game"

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"
noise = "0.8.2"
bevy_rapier2d = "0.23.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true 